[gd_scene load_steps=7 format=2]

[ext_resource path="res://logic/interface/ConstructionLogic.gd" type="Script" id=1]
[ext_resource path="res://art/coin.png" type="Texture" id=2]
[ext_resource path="res://art/workers.png" type="Texture" id=3]
[ext_resource path="res://logic/interface/ResourcesLogic.gd" type="Script" id=4]
[ext_resource path="res://scenes/ConstructionTooltip.tscn" type="PackedScene" id=5]
[ext_resource path="res://logic/interface/SpeedControlLogic.gd" type="Script" id=6]

[node name="TopBarInterface" type="Panel"]
anchor_right = 1.0
margin_bottom = 80.0
rect_min_size = Vector2( 1024, 80 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.93836
margin_bottom = -1.93836
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AllContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 36.0
margin_top = 14.0
margin_right = 988.0
margin_bottom = 66.0

[node name="Resources" type="GridContainer" parent="MarginContainer/AllContainer"]
margin_right = 232.0
margin_bottom = 52.0
columns = 5

[node name="ResourcesLogic" type="Node" parent="MarginContainer/AllContainer/Resources"]
script = ExtResource( 4 )

[node name="MoneyIcon" type="TextureRect" parent="MarginContainer/AllContainer/Resources"]
margin_right = 24.0
margin_bottom = 24.0
texture = ExtResource( 2 )
stretch_mode = 3

[node name="MoneyLabel" type="Label" parent="MarginContainer/AllContainer/Resources"]
margin_left = 28.0
margin_right = 116.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
text = "Rijksdaalders:"
valign = 1

[node name="MoneyValue" type="Label" parent="MarginContainer/AllContainer/Resources"]
margin_left = 120.0
margin_right = 170.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 24 )
text = "1000"
align = 2
valign = 1

[node name="VSeparator" type="VSeparator" parent="MarginContainer/AllContainer/Resources"]
margin_left = 174.0
margin_right = 178.0
margin_bottom = 24.0

[node name="IncomeValue" type="Label" parent="MarginContainer/AllContainer/Resources"]
margin_left = 182.0
margin_right = 232.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 24 )
text = "+1"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorkersIcon" type="TextureRect" parent="MarginContainer/AllContainer/Resources"]
margin_top = 28.0
margin_right = 24.0
margin_bottom = 52.0
texture = ExtResource( 3 )

[node name="WorkersLabel" type="Label" parent="MarginContainer/AllContainer/Resources"]
margin_left = 28.0
margin_top = 28.0
margin_right = 116.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 24 )
text = "Workers:"
valign = 1

[node name="WorkersValue" type="Label" parent="MarginContainer/AllContainer/Resources"]
margin_left = 120.0
margin_top = 28.0
margin_right = 170.0
margin_bottom = 52.0
rect_min_size = Vector2( 50, 24 )
text = "1000"
align = 2
valign = 1

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/AllContainer/Resources"]
margin_left = 174.0
margin_top = 28.0
margin_right = 178.0
margin_bottom = 52.0

[node name="WorkersGrowthValue" type="Label" parent="MarginContainer/AllContainer/Resources"]
margin_left = 182.0
margin_top = 28.0
margin_right = 232.0
margin_bottom = 52.0
rect_min_size = Vector2( 50, 24 )
text = "+1"
align = 2
valign = 1

[node name="VSeparator" type="VSeparator" parent="MarginContainer/AllContainer"]
margin_left = 236.0
margin_right = 240.0
margin_bottom = 52.0

[node name="ConstructionButtons" type="HBoxContainer" parent="MarginContainer/AllContainer"]
margin_left = 244.0
margin_right = 762.0
margin_bottom = 52.0

[node name="ConstructionLogic" type="Node" parent="MarginContainer/AllContainer/ConstructionButtons"]
script = ExtResource( 1 )

[node name="Unselect" type="Button" parent="MarginContainer/AllContainer/ConstructionButtons"]
margin_right = 69.0
margin_bottom = 52.0
text = "Unselect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="MarginContainer/AllContainer/ConstructionButtons"]
margin_left = 73.0
margin_right = 77.0
margin_bottom = 52.0

[node name="RaiseLand" type="Button" parent="MarginContainer/AllContainer/ConstructionButtons"]
margin_left = 81.0
margin_right = 161.0
margin_bottom = 52.0
text = "Raise Land"

[node name="ConstructionTooltip" parent="MarginContainer/AllContainer/ConstructionButtons/RaiseLand" instance=ExtResource( 5 )]
position = Vector2( 1.98425, 53.9716 )
tool_key = 1

[node name="LowerLand" type="Button" parent="MarginContainer/AllContainer/ConstructionButtons"]
margin_left = 165.0
margin_right = 249.0
margin_bottom = 52.0
text = "Lower Land"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConstructionTooltip" parent="MarginContainer/AllContainer/ConstructionButtons/LowerLand" instance=ExtResource( 5 )]
position = Vector2( 1.98425, 53.9716 )
tool_key = 2

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/AllContainer/ConstructionButtons"]
margin_left = 253.0
margin_right = 257.0
margin_bottom = 52.0

[node name="FloodBarrier" type="Button" parent="MarginContainer/AllContainer/ConstructionButtons"]
margin_left = 261.0
margin_right = 355.0
margin_bottom = 52.0
text = "Flood Barrier"

[node name="ConstructionTooltip" parent="MarginContainer/AllContainer/ConstructionButtons/FloodBarrier" instance=ExtResource( 5 )]
position = Vector2( 1.98425, 53.9716 )
tool_key = 3

[node name="Pump" type="Button" parent="MarginContainer/AllContainer/ConstructionButtons"]
margin_left = 359.0
margin_right = 408.0
margin_bottom = 52.0
text = "Pump"

[node name="ConstructionTooltip" parent="MarginContainer/AllContainer/ConstructionButtons/Pump" instance=ExtResource( 5 )]
position = Vector2( 1.98425, 53.9716 )
tool_key = 5

[node name="Pipe" type="Button" parent="MarginContainer/AllContainer/ConstructionButtons"]
margin_left = 412.0
margin_right = 452.0
margin_bottom = 52.0
text = "Pipe"

[node name="ConstructionTooltip" parent="MarginContainer/AllContainer/ConstructionButtons/Pipe" instance=ExtResource( 5 )]
position = Vector2( 1.98425, 53.9716 )
tool_key = 4

[node name="Destroy" type="Button" parent="MarginContainer/AllContainer/ConstructionButtons"]
margin_left = 456.0
margin_right = 518.0
margin_bottom = 52.0
text = "Destroy"

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/AllContainer"]
margin_left = 766.0
margin_right = 770.0
margin_bottom = 52.0

[node name="SpeedControls" type="HBoxContainer" parent="MarginContainer/AllContainer"]
margin_left = 774.0
margin_right = 952.0
margin_bottom = 52.0

[node name="SpeedControlLogic" type="Node" parent="MarginContainer/AllContainer/SpeedControls"]
script = ExtResource( 6 )

[node name="Speed1" type="Button" parent="MarginContainer/AllContainer/SpeedControls"]
margin_right = 36.0
margin_bottom = 52.0
rect_min_size = Vector2( 36, 0 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed2" type="Button" parent="MarginContainer/AllContainer/SpeedControls"]
margin_left = 40.0
margin_right = 76.0
margin_bottom = 52.0
rect_min_size = Vector2( 36, 0 )
text = ">>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed3" type="Button" parent="MarginContainer/AllContainer/SpeedControls"]
margin_left = 80.0
margin_right = 116.0
margin_bottom = 52.0
rect_min_size = Vector2( 36, 0 )
text = ">>>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/AllContainer/SpeedControls"]
margin_left = 120.0
margin_top = 19.0
margin_right = 178.0
margin_bottom = 33.0
text = "Speed x1"

[connection signal="pressed" from="MarginContainer/AllContainer/ConstructionButtons/Unselect" to="MarginContainer/AllContainer/ConstructionButtons/ConstructionLogic" method="_on_unselect"]
[connection signal="pressed" from="MarginContainer/AllContainer/ConstructionButtons/RaiseLand" to="MarginContainer/AllContainer/ConstructionButtons/ConstructionLogic" method="_on_raise_land"]
[connection signal="pressed" from="MarginContainer/AllContainer/ConstructionButtons/LowerLand" to="MarginContainer/AllContainer/ConstructionButtons/ConstructionLogic" method="_on_lower_land"]
[connection signal="pressed" from="MarginContainer/AllContainer/ConstructionButtons/FloodBarrier" to="MarginContainer/AllContainer/ConstructionButtons/ConstructionLogic" method="_on_construct_flood_barrier"]
[connection signal="pressed" from="MarginContainer/AllContainer/ConstructionButtons/Pump" to="MarginContainer/AllContainer/ConstructionButtons/ConstructionLogic" method="_on_construct_pump"]
[connection signal="pressed" from="MarginContainer/AllContainer/ConstructionButtons/Pipe" to="MarginContainer/AllContainer/ConstructionButtons/ConstructionLogic" method="on_construct_pipe"]
[connection signal="pressed" from="MarginContainer/AllContainer/ConstructionButtons/Destroy" to="MarginContainer/AllContainer/ConstructionButtons/ConstructionLogic" method="_on_destroy"]
[connection signal="pressed" from="MarginContainer/AllContainer/SpeedControls/Speed1" to="MarginContainer/AllContainer/SpeedControls/SpeedControlLogic" method="_on_Speed1_pressed"]
[connection signal="pressed" from="MarginContainer/AllContainer/SpeedControls/Speed2" to="MarginContainer/AllContainer/SpeedControls/SpeedControlLogic" method="_on_Speed2_pressed"]
[connection signal="pressed" from="MarginContainer/AllContainer/SpeedControls/Speed3" to="MarginContainer/AllContainer/SpeedControls/SpeedControlLogic" method="_on_Speed3_pressed"]
